having issue with cells shifting in maze when image is inserted

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -33,7 +33,9 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
-    
+    position:absolute;
+    top: 50%;
+    left:50%;
 }
 
 .button-container {
@@ -47,21 +49,19 @@ main{
 #maze-container{
     display: grid;
     justify-content: center;
-    grid-template-columns: repeat(auto-fill, minmax(70px, 1fr));
-    grid-template-rows: repeat(auto-fill, minmax(70px, 1fr));
+    grid-template-columns: repeat(6, 80px);
+    grid-template-rows: repeat(7, 80px);
     grid-gap: 0px;
-    height: 90vh;
+    height: 55vh;
     width: 90vw;
-    z-index: 0;
+    position: absolute;
+    z-index: 1;
 }
 
 .character-container{
-    z-index: 0;
-    
+    position: absolute;
+    z-index: 2;
 }
-
-
-
 .cell {
     width: 80px;
     height: 80px;
